--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
   "name": "event-booking-system-api",
   "version": "1.0.0",
-  "description": "Build a fully functional RESTful API for an Event Booking System where users can browse events, book tickets, and manage their bookings",
-  "main": "index.js",
+  "description": "A RESTful API for managing event bookings",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "express-validator": "^7.2.1",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.31.0",
+    "swagger-ui-express": "^4.6.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
   }
 }
